# group-project

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  fix_all.py  fix_db_manager.py  fix_flake8_issues.py  fix_format_issues.py  fix_import_order.py  fix_register_dialog.py  pyproject.toml  requirements.txt  run_app.py  test_macos_notification.py
.github/workflows/: ci-pipeline.yml
src/: app.py  main.py
src/analytics/: __init__.py  frontend_ui_main_window.py  service.py  stats.py  ui.py  visualization.py
src/auth/: __init__.py  service.py  ui.py
src/common/: interfaces.py
src/database/: manager.py  models.py
src/knowledge/: __init__.py  service.py  ui.py
src/scheduler/: __init__.py  algorithms.py  ebbinghaus_config.py  reminder.py  service.py  ui.py
src/settings/: ui.py
tests/: test_analytics.py  test_auth.py  test_reminder.py
